--- a/scss/style/_variables.scss
+++ b/scss/style/_variables.scss
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Marck+Script|Roboto');
+
 $color-blue: #05336e;
 $color-gold: #bb8d54;
+$color-gold-dark: darken($color-gold, 15%);
 $color-gray: #6d6e71;
+$color-orange: #b27529;
+
+$font-family: "Roboto", Arial, sans-serif;
+$font-family-title: "Marck Script", "Times New Roman", Times, serif;
