--- a/scss/style/_variables.scss
+++ b/scss/style/_variables.scss
@@ -5,6 +5,7 @@ $color-gold: #bb8d54;
 $color-gold-dark: darken($color-gold, 15%);
 $color-gray: #6d6e71;
 $color-orange: #b27529;
+$color-red: #a51516;
 
 $font-family: "Roboto", Arial, sans-serif;
 $font-family-title: "Marck Script", "Times New Roman", Times, serif;
