Добавлены переменные сетки

--- a/scss/style/_variables.scss
+++ b/scss/style/_variables.scss
@@ -9,3 +9,7 @@ $color-red: #a51516;
 
 $font-family: "Roboto", Arial, sans-serif;
 $font-family-title: "Marck Script", "Times New Roman", Times, serif;
+
+$width-extra-small: 320px;
+$width-small: 768px;
+$width-medium: 992px;
