Из анимации добавлено ровно то, что надо

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,4 @@
+@import '~animate.css/source/_base.css';
+@import '~animate.css/source/fading_exits/fadeOutUp.css';
 @import 'style/variables';
 @import 'style/content';
