--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import '~animate.css/source/_base.css';
 @import '~animate.css/source/fading_exits/fadeOutUp.css';
+@import 'style/fonts';
 @import 'style/variables';
 @import 'style/content';
